<resources>
    <string name="app_name">Zaoxi\'s Sejong Apps</string>
    <string name="remainingText">Remaining Available Attempts </string>
    <string name="outOfRemaining">Out of Attempts</string>

    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_age">Enter Age</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member? Login</string>
    <string name="select_student_name">Enter a Student Name</string>
    <string name="button_sql">SQLite</string>

    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="zero_btn">0</string>
    <string name="prev_btn">PREV</string>
    <string name="next_btn">NEXT</string>
    <string name="ac_btn">AC</string>
    <string name="ec_btn">EC</string>
    <string name="eq_btn">=</string>
    <string name="dot_btn">.</string>
    <string name="mul_btn">*</string>
    <string name="div_btn">/</string>
    <string name="add_btn">+</string>
    <string name="sub_btn">-</string>
    <string name="start_blank_btn">(</string>
    <string name="end_blank_btn">)</string>
    <string name="sin_btn">sin</string>
    <string name="cos_btn">cos</string>
    <string name="tan_btn">tan</string>
    <string name="deg_mode">Deg</string>
    <string name="rad_mode">Rad</string>
    <string name="title_activity_navigation">navigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="education_grade">Education Grade</string>
    <string name="grade_undergraduate">Undergraduate</string>
    <string name="grade_graduate">Graduate</string>

    <string name="passed_courses">Passed Courses</string>
    <string name="course_mobile_programming">Mobile Programming</string>
    <string name="course_database">Database</string>
    <string name="course_communications">Communications</string>
    <string name="course_operating_systems">Operating Systems</string>

    <string name="student_information">Student Information</string>
    <string name="student_full_name">Full Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_email">Email</string>
    <string name="student_age">Age</string>

    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
