<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CalculatorActivity">

    <TextView
        android:id="@+id/formulaText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="3"
        android:ellipsize="start"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resultText"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ellipsize="middle"
        android:gravity="end"
        android:singleLine="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/light_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stackController" />

    <LinearLayout
        android:id="@+id/stackController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/triFuncController"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_cyan"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prevBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/prev_btn"
            android:textSize="20sp"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/acBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/ac_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/next_btn"
            android:textSize="20sp"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/startBlankBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/start_blank_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/endBlankBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/end_blank_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triFuncController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/operatorBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_cyan"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sinBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/sin_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/cosBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cos_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/tanBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/tan_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/deg_radBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/deg_mode"
            android:textSize="20sp"
            android:background="@color/light_slate_gray"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/operatorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/numberPad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_cyan"
        android:orientation="horizontal">
        <Button
            android:id="@+id/multiplyBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/mul_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/divideBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/div_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/add_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/subsBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/sub_btn"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/numberPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/botLinearLayout"
        android:background="@color/light_cyan"
        android:stretchColumns="0,1,2">
        <TableRow>
            <Button
                android:id="@+id/oneBtn"
                android:layout_height="60dp"
                android:text="@string/one_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/twoBtn"
                android:layout_height="60dp"
                android:text="@string/two_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/threeBtn"
                android:layout_height="60dp"
                android:text="@string/three_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/fourBtn"
                android:layout_height="60dp"
                android:text="@string/four_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/fiveBtn"
                android:layout_height="60dp"
                android:text="@string/five_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/sixBtn"
                android:layout_height="60dp"
                android:text="@string/six_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/sevenBtn"
                android:layout_height="60dp"
                android:text="@string/seven_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/eightBtn"
                android:layout_height="60dp"
                android:text="@string/eight_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/nineBtn"
                android:layout_height="60dp"
                android:text="@string/nine_btn"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/botLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_cyan">
        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/zero_btn"
            android:textSize="20sp"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/dotBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/dot_btn"
            android:textSize="20sp"
            android:layout_weight="2"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/ecBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/ec_btn"
            android:textSize="20sp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/eqBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/eq_btn"
            android:textSize="20sp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>