<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/sejong_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/sejong_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/editTextColor"
                android:drawableLeft="@drawable/ic_action_name"
                android:hint="@string/hint_email"
                android:inputType="textWebEmailAddress"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/fab_margin"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:background="@color/editTextColor"
                android:drawableLeft="@drawable/ic_action_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/base_button"
            android:text="@string/text_login"
            android:textColor="@color/baseButtonTextColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/remainingCount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_vertical_margin"
            android:text="@string/remainingText"
            android:textAlignment="center"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:visibility="invisible" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/btn_vertical_margin"
            android:text="@string/text_not_member"
            android:textColor="#FFFFFFFF"
            android:textAlignment="center"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>