<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:background="@drawable/login_background"
    tools:context=".Activity.QueryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/sejong_logo"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fab_margin"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/queryNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/editTextColor"
                android:inputType="text"
                android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/queryEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/editTextColor"
                android:inputType="text"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/queryAgeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/editTextColor"
                android:inputType="numberSigned"
                android:hint="@string/hint_age"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/queryPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/editTextColor"
                android:inputType="numberSigned"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/small_base_button"
                android:textColor="@color/baseButtonTextColor"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Save" />
            <Button
                android:id="@+id/updateBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/small_base_button"
                android:textColor="@color/baseButtonTextColor"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:textSize="20sp"
                android:text="Update" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/small_base_button"
                android:textColor="@color/baseButtonTextColor"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Delete" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/selectNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:background="@color/editTextColor"
                android:inputType="text"
                android:hint="@string/select_student_name"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin">
            <Button
                android:id="@+id/selectBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/base_button"
                android:textColor="@color/baseButtonTextColor"
                android:textSize="30sp"
                android:text="Select"/>

            <Button
                android:id="@+id/selectAllBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/base_button"
                android:textColor="@color/baseButtonTextColor"
                android:textSize="25sp"
                android:text="Select All" />

        </LinearLayout>



    </LinearLayout>

</android.support.v4.widget.NestedScrollView>